tests/snapshots/run_wpt_conformance__coreml_neg_float16_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
neg.https.any.js neg float16 1D constant tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983303121_0.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([75, 211, 228, 85, 59, 212, 130, 208, 71, 76, 104, 83, 121, 209, 112, 203, 161, 77, 43, 86, 162, 64, 158, 213, 37, 203, 14, 76, 176, 196, 143, 209, 132, 210, 11, 78, 39, 212, 150, 201, 66, 206, 145, 77, 105, 80, 99, 213]);
  }

  nodes {
    [negOutput] = neg(operand_0, label="");
  }

  outputs { negOutput; }
}
Error(s) occurred compiling MIL to BNNS graph:
[CreateBnnsGraphProgramFromMIL]: BNNS failed to compile due to an exception: Storage Reader expects file format version 2. at location 
 @ CreateBnnsGraphProgramFromMIL
