tests/snapshots/run_wpt_conformance__coreml_neg_float16_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
neg.https.any.js neg float16 4D tensor, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'negInput' must be of rank 5, instead got a multi-array value of rank 4.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    negInput: f16[2, 2, 2, 3];
  }

  nodes {
    [negOutput] = neg(negInput, label="");
  }

  outputs { negOutput; }
}
