tests/snapshots/run_wpt_conformance__coreml_notEqual_float16_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
not_equal.https.any.js notEqual float16 1D constant tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983304001_0_9EF976C4-228C-4642-B502-9CCB81718364.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([157, 65, 151, 69, 182, 65, 255, 68, 200, 59, 190, 196, 157, 65, 151, 69, 28, 197, 160, 70, 164, 192, 14, 199, 157, 65, 151, 69, 251, 68, 113, 197, 149, 60, 198, 71, 157, 65, 151, 69, 63, 198, 179, 193, 100, 193, 209, 69]);
    operand_1: f16[24] @bytes([157, 65, 151, 69, 215, 196, 255, 68, 200, 59, 44, 198, 157, 65, 151, 69, 196, 71, 79, 196, 229, 197, 68, 200, 157, 65, 151, 69, 181, 49, 123, 196, 117, 57, 176, 198, 157, 65, 151, 69, 133, 200, 228, 191, 6, 194, 65, 67]);
  }

  nodes {
    [output] = notEqual(operand_0, operand_1, label="");
  }

  outputs { output; }
}
E5RT encountered an STL exception. msg = Espresso exception: "Network translation error": MIL->EIR translation error at /private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983304001_0_9EF976C4-228C-4642-B502-9CCB81718364.mlmodelc/model.mil:7:12: Storage Reader expects file format version 2..
