tests/snapshots/run_wpt_conformance__coreml_pad_float32_2D_tensor_with_options_value_as_Infinity.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
pad.https.any.js pad float32 2D tensor with options.value as Infinity, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type cast: Output '0' has incorrect type for operator 'ios17.cast'. Expected { tensor<fp16, [...]>, tensor<uint8, [...]>, tensor<fp32, [...]>, tensor<int32, [...]>, tensor<int16, [...]>, tensor<uint16, [...]>, tensor<int8, [...]>, tensor<bool, [...]> }; got tensor<int64, [3, 3]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    padInput: f32[3, 3];
  }

  nodes {
    [padOutput] = pad(padInput, label="", mode="", value="Infinity");
  }

  outputs { padOutput; }
}
