tests/snapshots/run_wpt_conformance__coreml_pad_int32_2D_tensor_options_value.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
pad.https.any.js pad int32 2D tensor options.value, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type pad: Required param 'constant_val' is missing

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    padInput: i32[3, 3];
  }

  nodes {
    [padOutput] = pad(padInput, label="", mode="", value=-1);
  }

  outputs { padOutput; }
}
