tests/snapshots/run_wpt_conformance__coreml_pow_float16_3D_base_tensor_and_3D_integer_exponent_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
pow.https.any.js pow float16 3D base tensor and 3D integer exponent tensor, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'inputB' must be of rank 2, instead got a multi-array value of rank 3.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[2, 3, 4];
    inputB: f16[2, 3, 4];
  }

  nodes {
    [output] = pow(inputA, inputB, label="");
  }

  outputs { output; }
}
