tests/snapshots/run_wpt_conformance__coreml_pow_float16_constant_1D_base_tensor_and_1D_integer_exponent_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
pow.https.any.js pow float16 constant 1D base tensor and 1D integer exponent tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983306158_0.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([118, 76, 10, 172, 239, 200, 151, 73, 86, 204, 238, 73, 53, 204, 81, 65, 145, 193, 225, 202, 145, 74, 1, 183, 215, 203, 36, 73, 114, 75, 241, 196, 30, 203, 135, 66, 79, 76, 198, 193, 195, 189, 194, 197, 90, 76, 91, 76]);
    operand_1: f16[24] @bytes([0, 60, 0, 66, 0, 199, 0, 64, 0, 192, 0, 60, 0, 64, 0, 201, 0, 192, 0, 197, 0, 192, 0, 201, 0, 200, 0, 199, 0, 188, 0, 194, 128, 200, 0, 64, 0, 198, 0, 66, 0, 197, 0, 197, 0, 64, 0, 198]);
  }

  nodes {
    [output] = pow(operand_0, operand_1, label="");
  }

  outputs { output; }
}
E5RT encountered an STL exception. msg = Espresso exception: "Network translation error": MIL->EIR translation error at /private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983306158_0.mlmodelc/model.mil:7:12: Storage Reader expects file format version 2..
