tests/snapshots/run_wpt_conformance__coreml_pow_float16_two_5D_inputs_with_identical_shapes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
pow.https.any.js pow float16 two 5D inputs with identical shapes, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: MultiArray shape (2 x 2 x 2 x 2 x 2) does not match the shape (1 x 2 x 1 x 2 x 1) specified in the model description

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[2, 2, 2, 2, 2];
    inputB: f16[2, 2, 2, 2, 2];
  }

  nodes {
    [output] = pow(inputA, inputB, label="");
  }

  outputs { output; }
}
