tests/snapshots/run_wpt_conformance__coreml_pow_float32_5D_and_broadcastable_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
pow.https.any.js pow float32 5D and broadcastable 4D, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'inputB' must be of rank 5, instead got a multi-array value of rank 4.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[1, 2, 2, 1, 1];
    inputB: f32[2, 1, 1, 3];
  }

  nodes {
    [output] = pow(inputA, inputB, label="");
  }

  outputs { output; }
}
